# tirex-tracker

./: .gitignore  .markdownlint.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  mkdocs.yml  tirex-tracker.code-workspace  versions.json
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: dependabot.yml
.github/actions/: downgrade-node.yml
.github/workflows/: Dockerfile  ci.yaml  ci.yml
0.2.22/: 404.html  index.html  sitemap.xml
0.2.22/api/c/: index.html
0.2.22/api/java/: index.html
0.2.22/api/python/: index.html
0.2.22/developer/adding-measures/: index.html
0.2.22/developer/architecture/: index.html
0.2.22/developer/building/: index.html
0.2.22/getting-started/c/: index.html
0.2.22/getting-started/cli/: index.html
0.2.22/getting-started/java/: index.html
0.2.22/getting-started/python/: index.html
0.2.22/guides/aggregation/: index.html
0.2.22/guides/ir-metadata/: index.html
0.2.22/guides/measures/: index.html
0.2.22/search/: search_index.json
0.2.22/tirex_tracker_c/annotated/: index.html
0.2.22/tirex_tracker_c/class_member_enums/: index.html
0.2.22/tirex_tracker_c/class_member_functions/: index.html
0.2.22/tirex_tracker_c/class_member_typedefs/: index.html
0.2.22/tirex_tracker_c/class_member_variables/: index.html
0.2.22/tirex_tracker_c/class_members/: index.html
0.2.22/tirex_tracker_c/classes/: index.html
0.2.22/tirex_tracker_c/dir_1784a01aa976a8c78ef5dfc3737bcac8/: index.html
0.2.22/tirex_tracker_c/dir_2d10db7395ecfee73f7722e70cabff64/: index.html
0.2.22/tirex_tracker_c/dir_38a876d14b5516144c7bcccda62f37ac/: index.html
0.2.22/tirex_tracker_c/files/: index.html
0.2.22/tirex_tracker_c/functions/: index.html
0.2.22/tirex_tracker_c/group__dataprovider/: index.html
0.2.22/tirex_tracker_c/group__error/: index.html
0.2.22/tirex_tracker_c/group__irtracking/: index.html
0.2.22/tirex_tracker_c/group__logging/: index.html
0.2.22/tirex_tracker_c/group__measure/: index.html
0.2.22/tirex_tracker_c/group__measureinfo/: index.html
0.2.22/tirex_tracker_c/group__tirexresult/: index.html
0.2.22/tirex_tracker_c/hierarchy/: index.html
0.2.22/tirex_tracker_c/irtracker_8h/: index.html
0.2.22/tirex_tracker_c/irtracker_8h_source/: index.html
0.2.22/tirex_tracker_c/links/: index.html
0.2.22/tirex_tracker_c/macros/: index.html
0.2.22/tirex_tracker_c/modules/: index.html
0.2.22/tirex_tracker_c/pages/: index.html
c/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  doxygen-header.html  test.cpp
c/cli/: CMakeLists.txt  config.hpp  formatters.hpp  logging.hpp  main.cpp
c/examples/: CMakeLists.txt
c/examples/01_c/: CMakeLists.txt  main.c
c/examples/01_tracking/: CMakeLists.txt  cjson.patch  main.c  plotting.cpp
c/examples/02_list_measures/: CMakeLists.txt  main.c
c/examples/02_python/: main.py
c/examples/03_ir_metadata_export/: CMakeLists.txt  main.c
c/examples/03_measure_command/: CMakeLists.txt  config.hpp  formatters.cpp  formatters.hpp  logging.cpp  logging.hpp  main.cpp  utils.cpp  utils.hpp
c/examples/04_ir_extension/: CMakeLists.txt  main.c
c/examples/05_live_tracking/: CMakeLists.txt  main.cpp
c/extensions/: CMakeLists.txt  irmeasure.cpp  irmeasure.h  irtracker.cpp  irtracker.h
c/include/: measure.h  tirex_tracker.h
c/src/: CMakeLists.txt  abort.cpp  abort.hpp  logging.cpp  logging.hpp  measureapi.cpp  measureinfo.cpp  measureresult.cpp
c/src/measure/: measure.hpp  timeseries.hpp
c/src/measure/stats/: amdstats.cpp  amdstats.hpp  devcontainerstats.cpp  devcontainerstats.hpp  energystats.cpp  energystats.hpp  gitstats.cpp  gitstats.hpp  gpustats.cpp  gpustats.hpp  ioreportstats.cpp  ioreportstats.hpp  nvmlstats.cpp  nvmlstats.hpp  pmicstats.cpp  pmicstats.hpp  provider.cpp  provider.hpp  systemstats.cpp  systemstats.hpp  systemstats_linux.cpp  systemstats_macos.cpp  systemstats_windows.cpp  temperaturestats.cpp  temperaturestats.hpp
c/src/measure/stats/details/macos/: ioreport.h
c/src/measure/stats/details/raspberrypi/: pmicreader.cpp  pmicreader.hpp
c/src/measure/stats/macos/: ioreport.h  sysctl.hpp
c/src/measure/utils/: rangeutils.hpp  sharedlib.hpp  tirexutils.hpp
c/tests/: CMakeLists.txt  peek.cpp  tracker.cpp
c/tests/measure/: timeseries.cpp
c/tests/measure/stats/: gitstats.cpp
c/tests/test_utils/: cwdscopeguard.hpp  mockfolder.hpp
docs/: index.md  requirements.txt
docs/api/: c.md  java.md  python.md
docs/developer/: adding-measures.md  architecture.md  building.md
docs/getting-started/: c.md  cli.md  java.md  python.md
docs/guides/: aggregation.md  ir-metadata.md  measures.md
examples/02_python/: main.py
examples/03_measure_command/: main.cpp  utils.hpp
include/: measure.h
jvm/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
jvm/example/: build.gradle.kts
nightly/: 404.html  index.html  objects.inv  sitemap.xml
nightly/search/: search_index.json
python/: .readthedocs.yml  Makefile  README.md  mkdocs.yml  pyproject.toml
python/docs/: index.md  requirements.txt
python/examples/: .gitignore  example-notebook.ipynb  example-terrier-anserini-pisa.ipynb  example.py
python/measure/: __init__.py
python/test/: test_environment.py  test_extraction_of_code.py  test_integration.py  test_measure.py  test_tirex_tracker.py
python/tests/: test_codecarbon.py  test_custom_metrics.py  test_error_handling.py  test_extraction_of_code.py  test_integration.py  test_redundant_tracking.py  test_registered_metadata.py  test_registering_files.py  test_tirex_tracker.py
python/tests/utils/: __init__.py  changeworkingdir.py
python/tira_measure/: __init__.py  ir_metadata.py
python/tirex_tracker/: __init__.py  _compat.py  _custom_metrics.py  archive_utils.py  ir_metadata.py  pyterrier.py  utils.py
python/tirex_tracker/_utils/: archive.py  constants.py  deepchainmap.py  errorhandling.py  library.py  results.py
sh/: README.md  tirex-tracker.sh
sh/test/: test_in_docker_images_with_tirex_tracker_available.py  test_in_docker_images_with_tirex_tracker_not_available.py
src/: CMakeLists.txt  logging.hpp
(+132 files in other folders)
